--- a/style.css
+++ b/style.css
@@ -5,19 +5,76 @@ html{
     background-attachment: fixed;
     background-size: cover;
     /*background by SVGBackgrounds.com*/
+    color: rgb(63, 78, 143);
 }
 
 /*navigation bar*/
 nav{
     display: block;
-    background-color: rgb(255, 248, 239);
-    padding: 2rem 2rem;
+    background-color: rgb(255, 252, 223);
+    padding: 4rem 5rem;
+    text-align: right;
+}
+
+.navbar a{
+    padding: 11px;
+    color: rgb(102, 125, 230);
+    font-size: 22px;
+}
+.navbar a:active{
+    border-radius: 2px;
+    background-color: rgb(102, 125, 230);
+}
+.navbar a:hover{
+    overflow: auto;
+    color: rgb(102, 125, 230);
 }
 a{
+    margin-right: 20px;
     font-family: fantasy;
     text-decoration: none;
-    color: rgb(236, 100, 141);
 }
 li{
     list-style-type: none;
+    display: inline-block;
+    margin-left: auto;
+}
+
+/*images(s)*/
+.logo{
+    display: block;
+    position: absolute;
+    left: 4rem;
+    top: 2rem;
+}
+.homepool{
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto 100%;
+    top: 35px;
+    box-shadow: 10px 10px 7px;
+}
+
+/*fake reviews*/
+p{
+    display: inline;
+    position: relative;
+    top: 15rem;
+    left:5rem;
+    font-size: 25px;
+    background-color: rgb(255, 252, 223);
+    border-radius: 4px;
+    padding: 7rem;
+    margin-left: 2rem;
+    box-shadow: 10px 10px 7px;
+}
+
+/*footer*/
+footer{
+    position: relative;
+    text-align: center;
+    top: 450px;
+    bottom: 5px auto;
 }
