--- a/sign-up.css
+++ b/sign-up.css
@@ -5,33 +5,29 @@ html{
     background-attachment: fixed;
     background-size: cover;
     /*background by SVGBackgrounds.com*/
+    color: rgb(63, 78, 143);
 }
 
 /*navigation bar*/
 nav{
-    display: block;
-    background-color: rgb(255, 252, 223);
-    padding: 4rem 15rem;
+    display: absolute;
+    background-color: #fffcdf;
+    padding: 4rem 5rem;
     text-align: right;
+    box-shadow: 10px 10px 7px;
 }
-
-.logo{
-    position: absolute;
-    left: 4rem;
-    top: 2rem;
-}
-
 .navbar a{
-    padding: 12px 10px;
-    color: rgb(236, 100, 141);
+    padding: 11px;
+    color: #667de6;
+    font-size: 22px;
+    
 }
 .navbar a:active{
     border-radius: 2px;
-    background-color: royalblue;
+    background-color: #667de6;
 }
 .navbar a:hover{
-    overflow: auto;
-    color: rgb(57, 97, 206);
+    color: #384daa;
 }
 a{
     margin-right: 20px;
@@ -42,4 +38,18 @@ li{
     list-style-type: none;
     display: inline-block;
     margin-left: auto;
+}
+
+/*images(s)*/
+.logo{
+    display: block;
+    position: absolute;
+    left: 4rem;
+    top: 2rem;
+}
+
+fieldset{
+    position: relative;
+    background-color: #fffcdf;
+    top: 5rem;
 }
