--- a/style.css
+++ b/style.css
@@ -10,24 +10,25 @@ html{
 
 /*navigation bar*/
 nav{
-    display: block;
-    background-color: rgb(255, 252, 223);
+    display: absolute;
+    background-color: #fffcdf;
     padding: 4rem 5rem;
     text-align: right;
+    box-shadow: 10px 10px 7px;
 }
 
 .navbar a{
     padding: 11px;
-    color: rgb(102, 125, 230);
+    color: #667de6;
     font-size: 22px;
+    
 }
 .navbar a:active{
     border-radius: 2px;
-    background-color: rgb(102, 125, 230);
+    background-color: #667de6;
 }
 .navbar a:hover{
-    overflow: auto;
-    color: rgb(102, 125, 230);
+    color: #384daa;
 }
 a{
     margin-right: 20px;
@@ -55,6 +56,7 @@ li{
     margin-top: auto 100%;
     top: 35px;
     box-shadow: 10px 10px 7px;
+    /*photo from Nightingale Art House on Pexels*/
 }
 
 /*fake reviews*/
@@ -64,7 +66,7 @@ p{
     top: 15rem;
     left:5rem;
     font-size: 25px;
-    background-color: rgb(255, 252, 223);
+    background-color: #fffcdf;
     border-radius: 4px;
     padding: 7rem;
     margin-left: 2rem;
