--- a/sign-up.css
+++ b/sign-up.css
@@ -20,7 +20,6 @@ nav{
     padding: 11px;
     color: #667de6;
     font-size: 22px;
-    
 }
 .navbar a:active{
     border-radius: 2px;
@@ -34,10 +33,10 @@ a{
     font-family: fantasy;
     text-decoration: none;
 }
-li{
+.navbar li{
     list-style-type: none;
-    display: inline-block;
     margin-left: auto;
+    display: inline-block;
 }
 
 /*images(s)*/
@@ -48,8 +47,27 @@ li{
     top: 2rem;
 }
 
+legend{
+    font-size: larger;
+    color: #667de6;
+}
 fieldset{
     position: relative;
     background-color: #fffcdf;
-    top: 5rem;
+    top: 1.5rem;
+    border: 0px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 7px;
+}
+li{
+    position: relative;
+    display: block;
+}
+label{
+    display: inline-block;
+    width: 80px;
+    text-align: right;
+}
+input, textarea{
+    
 }
