--- a/sign-up.css
+++ b/sign-up.css
@@ -65,9 +65,21 @@ li{
 }
 label{
     display: inline-block;
-    width: 80px;
+    width: 200px;
     text-align: right;
 }
 input, textarea{
-    
+    box-sizing: border-box;
+    width: 200px;
+}
+p{
+    position: relative;
+    left: 7rem;
+}
+.question{
+    width: 50px;
+}
+.submit{
+    position: relative;
+    left: 29rem;
 }
