touch ups on css(10/22/2020 ac)

--- a/Gallery.css
+++ b/Gallery.css
@@ -50,6 +50,7 @@ nav{
   background-color: rgb(255, 252, 223);
   padding: 4rem 5rem;
   text-align: right;
+  box-shadow: 10px 10px 7px;
 }
 
 .navbar a{
