--- a/sign-up.css
+++ b/sign-up.css
@@ -47,6 +47,7 @@ a{
     top: 2rem;
 }
 
+/*the sign up layout*/
 legend{
     font-size: larger;
     color: #667de6;
@@ -59,6 +60,8 @@ fieldset{
     border-radius: 5px;
     box-shadow: 10px 10px 7px;
 }
+
+/*the actual sign up stuff*/
 li{
     position: relative;
     display: block;
@@ -71,6 +74,7 @@ label{
 input, textarea{
     box-sizing: border-box;
     width: 200px;
+    margin: 5px;
 }
 p{
     position: relative;
