--- a/Serves.css
+++ b/Serves.css
@@ -25,7 +25,7 @@ h1{
     font-size: 80px;
     text-align: center;
     font-family: 'Sarpanch', sans-serif;
-    text-shadow: 1vmin 1vmin 0 #00ffff
+    text-shadow: 1vmin 1vmin 0 #00ffff;
   }
   h2{
     font-size: 70px;
@@ -44,6 +44,7 @@ nav{
     background-color: rgb(255, 252, 223);
     padding: 4rem 5rem;
     text-align: right;
+    box-shadow: 10px 10px 7px;
 }
 
 .navbar a{
@@ -76,14 +77,5 @@ li{
     position: absolute;
     left: 4rem;
     top: 2rem;
-}
-.homepool{
-    display: block;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto 100%;
-    top: 35px;
-    box-shadow: 10px 10px 7px;
 }
 
