more css touchups (10/22/2020 ac)

--- a/sign-up.css
+++ b/sign-up.css
@@ -49,8 +49,9 @@ a{
 
 /*the sign up layout*/
 legend{
-    font-size: larger;
+    font-size: 1.8rem;
     color: #667de6;
+    font-family: fantasy;
 }
 fieldset{
     position: relative;
@@ -87,3 +88,12 @@ p{
     position: relative;
     left: 29rem;
 }
+
+/*footer*/
+footer{
+    position: relative;
+    text-align: center;
+    top: 70px;
+    bottom: 5px auto;
+  }
+  
