--- a/Gallery.css
+++ b/Gallery.css
@@ -7,18 +7,12 @@ main{
   align-items: center;
   justify-items: center;
   background-color: #fffcdf;
+  height: 35rem;
+  box-shadow: 10px 10px 7px;
 }
-
 .Floats1{
   max-width: 250px;
   width: 200%;
-}
-
-.logo{
-    display: block;
-    position: absolute;
-    left: 4rem;
-    top: 2rem;
 }
 
 
@@ -32,7 +26,6 @@ h1{
   font-size: 80px;
   text-align: center;
   font-family: 'Sarpanch', sans-serif;
-  text-shadow: 1vmin 1vmin 0 #00ffff
 }
 html{
   /*SVG background DO NOT touch pls*/
@@ -63,8 +56,7 @@ nav{
   background-color: rgb(102, 125, 230);
 }
 .navbar a:hover{
-  overflow: auto;
-  color: rgb(102, 125, 230);
+  color: #384daa;
 }
 a{
   margin-right: 20px;
@@ -84,22 +76,13 @@ li{
   left: 4rem;
   top: 2rem;
 }
-.homepool{
-  display: block;
+
+/*footer*/
+footer{
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto 100%;
-  top: 35px;
-  box-shadow: 10px 10px 7px;
+  text-align: center;
+  top: 50px;
+  bottom: 5px auto;
 }
-
-
-
-
-
-
-
-
 
 
