--- a/Serves.css
+++ b/Serves.css
@@ -25,13 +25,11 @@ h1{
     font-size: 80px;
     text-align: center;
     font-family: 'Sarpanch', sans-serif;
-    text-shadow: 1vmin 1vmin 0 #00ffff;
   }
   h2{
     font-size: 70px;
     text-align: center;
     font-family: 'Sarpanch', sans-serif;
-    text-shadow: 1vmin 1vmin 0 #00ffff
   }
 
 
@@ -57,8 +55,7 @@ nav{
     background-color: rgb(102, 125, 230);
 }
 .navbar a:hover{
-    overflow: auto;
-    color: rgb(102, 125, 230);
+    color: #384daa;
 }
 a{
     margin-right: 20px;
@@ -79,3 +76,11 @@ li{
     top: 2rem;
 }
 
+/*footer*/
+footer{
+    position: relative;
+    text-align: center;
+    top: 35px;
+    bottom: 5px auto;
+  }
+  
