fixed the submit button on the sign in page and a few inconsistent fonts(10-22-22 ac)

--- a/Serves.css
+++ b/Serves.css
@@ -24,12 +24,12 @@ html{
 h1{
     font-size: 80px;
     text-align: center;
-    font-family: 'Sarpanch', sans-serif;
+    font-family: fantasy, sans-serif;
   }
   h2{
     font-size: 70px;
     text-align: center;
-    font-family: 'Sarpanch', sans-serif;
+    font-family: fantasy, sans-serif;
   }
 
 
