--- a/Gallery.css
+++ b/Gallery.css
@@ -1,4 +1,3 @@
-
 main{
   display: grid;
   grid-template-columns: repeat(5, auto);
@@ -25,7 +24,7 @@ main{
 h1{
   font-size: 80px;
   text-align: center;
-  font-family: 'Sarpanch', sans-serif;
+  font-family: fantasy, sans-serif;
 }
 html{
   /*SVG background DO NOT touch pls*/
